--- a/src/app/components/foodbooking/foodbooking.component.css
+++ b/src/app/components/foodbooking/foodbooking.component.css
@@ -30,7 +30,7 @@
 
 .main-img {
     width: 100%;
-    height: 45vh;
+    /* height: 45vh; */
     object-fit: cover;
     display: block;
 }
@@ -191,7 +191,7 @@
 }
 
 .card-booking {
-    max-width: 488px;
+    max-width: 700px;
     /* control width */
     margin: 0 auto;
     /* center horizontally */
@@ -322,6 +322,12 @@
 
     .price {
         font-size: 1.25rem;
+    }
+}
+@media (min-width: 992px) {
+    .col-lg-4 {
+        flex: 0 0 auto;       
+        width: 45.333333%;   
     }
 }
 
