--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -14,9 +14,9 @@
     </p>
     <!-- Social Icons -->
     <div class="d-flex justify-content-center justify-content-md-start gap-3 mt-3">
-      <img src="/img/Linkedin.svg" alt="">
-      <img src="/img/x.svg" alt="">
-      <img src="/img/Instagram.svg" alt="">
+      <img class="floating-img" src="/img/Linkedin.svg" alt="">
+      <img class="floating-img" src="/img/x.svg" alt="">
+      <img class="floating-img" src="/img/Instagram.svg" alt="">
     </div>
   </div>
 
